--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,6 +1,7 @@
 :root{
     --principal-color: #9C640C;
-    --second-color: #C8E6C9;
+    /* --second-color: #C8E6C9; */
+    --second-color: #B6D9E0; 
     --light-color: #ffffff;
     --dark-color: #000000;
     --bg-color-1: hsl(28, 74%, 33%);
@@ -14,13 +15,15 @@
 html{
     font-size: 62.5%;
     font-family: 'Raleway', sans-serif; 
+    scroll-behavior: smooth;
 }
 
+/* HEADER */
 header{
     width: 100%;
     height: 10vh;
     padding: 0 20px;
-    background-color: var(--bg-color-2);
+    background-color: var(--principal-color);
 }
 .navBar{
     width: 100%;
@@ -31,7 +34,7 @@ header{
 }
 .navBar_alias{
     font-size: 2rem;
-    color: var(--principal-color);
+    color: var(--second-color);
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
 }
@@ -45,24 +48,31 @@ header{
 .navBar_items a{
     text-decoration: none;
     list-style: none;
-    color: var(--dark-color);
+    color: var(--light-color);
     font-size: 1.6rem;
 }
 .navBar_items a:hover{
-    color: var(--principal-color)
+    color: var(--second-color)
+}
+
+
+/* MAIN */
+main{
+    width: 65vw;
+    margin: 0 auto;
 }
 
 .whoIam{
     width: 100%;
     height: 85vh;
+    margin-bottom: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .whoIam_description{
     text-align: center;
-    width: 400px ;
-    margin-bottom: 50px;
+    width: 285px ;
 }
 .whoIam_description h2{
     font-size: 2.6rem;
@@ -73,8 +83,27 @@ header{
     font-family: 'Quicksand', sans-serif;
 }
 .whoIam_description p{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    color: var(--principal-color);
+    margin-bottom: 35px;
 }
+.whoIam_description a{
+    width: 50px;
+    height: 15px;
+    background-color: var(--principal-color);
+    color: var(--light-color);
+    padding: 10px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-decoration: none;
+}
+.whoIam_description a:hover{
+    /* OPCION 1 */
+    background-color: var(--second-color);
+    color: var(--dark-color);
+    border: 1px solid var(--dark-color);
+}
+
 .whoIam_image{
     background-color: var(--second-color);
     position: relative;
@@ -92,4 +121,56 @@ header{
     background: transparent;
 }
 
+.about{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.about h2{
+    font-size: 2.6rem;
+    font-family: 'Quicksand', sans-serif;
+    color: var(--principal-color);
+}
 
+
+.about_whoiam h3{
+    font-size: 2rem;
+    color: var(--dark-color);
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.about_whoiam p{
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 35px;
+}
+
+.about_skills{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.about_skills h3{
+    font-size: 2rem;
+    color: var(--dark-color);
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.about_skills--list{
+    display: flex;
+    justify-content: space-between;
+
+}
+.about_skills--list span{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid var(--principal-color);
+}
