--- a/src/style/main.css
+++ b/src/style/main.css
@@ -4,7 +4,7 @@
     --second-color: #B6D9E0; 
     --light-color: #ffffff;
     --dark-color: #000000;
-    --bg-color-1: hsl(28, 74%, 33%);
+    --bg-color-1: rgb(146, 80, 22);
     --bg-color-2: #F8F0E8;
 }
 *{
@@ -128,10 +128,11 @@ main{
     justify-content: space-evenly;
     align-items: center;
 }
-.about h2{
+.title_main{
     font-size: 2.6rem;
     font-family: 'Quicksand', sans-serif;
     color: var(--principal-color);
+    margin-bottom: 15px;
 }
 
 
@@ -147,6 +148,7 @@ main{
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 35px;
+    text-align:left;
 }
 
 .about_skills{
@@ -154,6 +156,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-bottom: 50px;
 }
 .about_skills h3{
     font-size: 2rem;
@@ -165,12 +168,143 @@ main{
 
 .about_skills--list{
     display: flex;
-    justify-content: space-between;
-
+    flex-wrap: wrap;
+    gap: 15px;
 }
 .about_skills--list span{
     width: 50px;
     height: 50px;
+    margin: 0 auto;
     border-radius: 50%;
     border: 1px solid var(--principal-color);
+}
+.about_skills--list span i{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+    color: var(--principal-color);
+    transition: transform 0.5s ease-in-out;
+}
+
+.about_skills--list span i:hover{
+    color: var(--bg-color-1);
+    transform: rotate(10deg) scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+.projects{
+    text-align: center;
+}
+.projects_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.projects_container--item{
+    width: 250px;
+    height: 280px;
+    padding: 6px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    margin-bottom: 25px;
+}
+.projects_container--item img{
+    width: 230px;
+    height: 140px;
+    object-fit: cover;
+    transition: transform 1s, filter 2s ease-in-out;
+    filter: grayscale(20%);
+    margin-bottom: 15px;
+}
+.projects_container--item img:hover{
+    filter: brightness(100%);
+    transform: scale(1.1);
+}
+.projects_container--item a{ 
+    width: 60%;
+    height: 25px;
+    padding: 5px;
+    border: none;
+    background-color: var(--principal-color);
+    color: var(--light-color);
+    border-radius: 5px;
+    cursor: pointer;
+}
+.projects_container--item a:hover{
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: var(--bg-color-1);
+    transform: translateY(-1px);
+}
+.contact{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contact a{
+    position: relative;
+    display: flex;
+    width: 25%;
+    height: 100%;
+    padding: 10px;
+    min-width: 150px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
+}
+.contact a:nth-of-type(1){
+    background-color: rgb(10, 102, 194);
+}
+.contact a:nth-of-type(2){
+    background-color: rgb(26, 140, 216);
+}
+.contact a:nth-of-type(3){
+    background-color:rgb(139, 148, 158);
+}
+.contact a:nth-of-type(4){
+    background-color: rgb(234, 67, 53);
+}
+.contact a svg{
+    position: absolute;
+    top: -8px;
+    opacity: 0; 
+    width: 50px;
+    height: 50px;
+    color: var(--light-color);
+    transition: opacity 0.5s ease-in-out,transform 0.5s ease-in-out;
+}
+ .contact a:hover svg{
+    opacity: 1; 
+    transform: translateY(25px);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+} 
+
+.contact a span{
+    color: var(--light-color);
+    font-size: 1.6rem;
+    transition: transform 0.5s ease-in-out;
+}
+.contact a:hover span{
+    transition: transform 0.2s ease-in-out;
+    transform: translateY(25px);
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+footer p{
+    font-size: 1.6rem;
+    font-weight: 700;
+    font-family: 'Quicksand', sans-serif;;
+    margin: 8px;
 }
