--- a/src/style/main.css
+++ b/src/style/main.css
@@ -52,6 +52,14 @@ header{
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
 }
+.menuMobile {
+    color: var(--light-color);
+    display: none;
+}
+.menuMobile svg{
+    fill: currentColor;
+    scale: 0.6;
+}
 .navBar_items{
     display: flex;
     justify-content: space-around;
@@ -68,6 +76,7 @@ header{
 .navBar_items a:hover{
     color: var(--second-color)
 }
+
 .inactive{
     display: none;
 }
@@ -75,7 +84,8 @@ header{
 
 /* MAIN */
 main{
-    width: 65vw;
+    width: 90vw;
+    max-width: 830px;
     margin: 0 auto;
 }
 
@@ -124,16 +134,18 @@ main{
 .whoIam_image{
     background-color: var(--second-color);
     position: relative;
-    width: 300px;
+    width: 50%;
+    max-width: 308px;
+    min-width: 220px;
     height: 300px;
     border-radius: 50%;
 }
 
 .whoIam_image img{
     position: absolute;
-    top: -38%;
-    left: 10%;
-    width: 300px;
+    bottom: 0;
+    left: 8%;
+    width: 100%;
     height: 380px;
     background: transparent;
 }
@@ -152,6 +164,9 @@ main{
     margin-bottom: 15px;
 }
 
+.about_whoiam{
+    margin-bottom: 50px;
+}
 
 .about_whoiam h3{
     font-size: 2rem;
@@ -262,7 +277,6 @@ main{
 }
 .contact{
     width: 100%;
-    height: 120px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -271,7 +285,7 @@ main{
     position: relative;
     display: flex;
     width: 25%;
-    height: 100%;
+    height: 120px;
     padding: 10px;
     min-width: 150px;
     flex-direction: column;
@@ -326,4 +340,34 @@ footer p{
     font-weight: 700;
     font-family: 'Quicksand', sans-serif;;
     margin: 8px;
+}
+/*Media querys*/
+@media (max-width:620px){
+    .navBar_items{
+        position: absolute;
+        top: 61px;
+        left:calc(55% - 55px);
+        gap: 10px;
+        width: 100px;
+        height: 120px;
+        flex-wrap: wrap;
+        background-color: var(--principal-color);
+        color: var(--dark-color);
+        box-shadow: 0 0 5px var(--dark-color);
+    }
+    .menuMobile{
+        display: block;
+    }
+    .whoIam{
+        margin-top: 10px;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .whoIam_image{
+        height: 200px;
+    }
+    .whoIam_image img{
+        height: 280px;
+        
+    }
 }
