--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,8 +1,9 @@
 :root{
     --principal-color: #9C640C;
-    --second-color: #B6D9E0; 
-    --light-color: #ffffff;
-    --dark-color: #000000;
+    --second-color:#E0FFD9;
+    --light-color: #FCFFF4;
+    --hover-color: #9CC76A;
+    --dark-color: #353C1E;
     --bg-color-1: rgb(146, 80, 22);
     --bg-color-2: #F8F0E8;
 }
@@ -10,9 +11,9 @@
     /* Dark Mode */
     --principal-color: #F5DEB3;
     --second-color: rgb(146, 80, 22);
-    --light-color: #000000;
-    --dark-color: #ffffff;
-    --bg-color-1: #B6D9E0;
+    --light-color: #353C1E;
+    --dark-color: #FCFFF4;
+    --bg-color-1: #E0FFD9;
 }
 
 
@@ -61,6 +62,7 @@ header{
     scale: 0.6;
 }
 .navBar_items{
+    padding: 6px 0;
     display: flex;
     justify-content: space-around;
     width: 60%;
@@ -74,7 +76,9 @@ header{
     font-size: 1.6rem;
 }
 .navBar_items a:hover{
-    color: var(--second-color)
+    color: var(--hover-color);
+    font-weight: 500;
+    font-size: 1.8rem;
 }
 
 .inactive{
@@ -85,6 +89,7 @@ header{
 /* MAIN */
 main{
     width: 90vw;
+
     max-width: 830px;
     margin: 0 auto;
 }
@@ -93,6 +98,7 @@ main{
     width: 100%;
     height: 85vh;
     margin-bottom: 50px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
