--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,19 +1,30 @@
 :root{
+    --black: #505050;
+    --white:#ffffff;
+}
+[data-theme="dark"] {
+    /* Dark Mode */
+    --principal-color: #9C640C;
+    --second-color: rgb(146, 80, 22);
+    --cards-color: rgba(135, 86, 43, 0.48);
+    --dark-color: #353C1E;
+    --hover-color: #9CC76A;
+    --light-color: #FCFFF4;
+    --bg-color-1: #E0FFD9;
+    --bg-color-2: #5a6732;
+    --main-about-color: #a18e70;
+}
+[data-theme="light"] {
+    /* Light Mode */
     --principal-color: #9C640C;
     --second-color:#E0FFD9;
     --light-color: #FCFFF4;
     --hover-color: #9CC76A;
-    --dark-color: #353C1E;
+    --dark-color: #454f27;
     --bg-color-1: rgb(146, 80, 22);
     --bg-color-2: #F8F0E8;
-}
-[data-theme="dark"] {
-    /* Dark Mode */
-    --principal-color: #F5DEB3;
-    --second-color: rgb(146, 80, 22);
-    --light-color: #353C1E;
-    --dark-color: #FCFFF4;
-    --bg-color-1: #E0FFD9;
+    --bg-about: #F2F4E5;
+    --border-skills: #768543;
 }
 
 
@@ -29,15 +40,22 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: var(--light-color);
-    color: var(--dark-color);
+    background-color: var(--dark-color);
+    color: var(--black);
 }
+[data-theme="light"] body{
+    background-color: var(--light-color);
+}
+[data-theme="dark"] body{
+    color: var(--light-color);
+}
+
 
 /* HEADER */
 header{
     width: 100%;
     height: 10vh;
-    padding: 0 20px;
+    padding: 0px 30px;
     background-color: var(--principal-color);
 }
 .navBar{
@@ -47,9 +65,20 @@ header{
     justify-content: space-between;
     align-items: center;
 }
+.navBar_brand{
+    display: flex;
+    gap: 7px;
+    justify-content: center;
+    align-items: center;
+}
+.navBar_brand img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
 .navBar_alias{
     font-size: 2rem;
-    color: var(--second-color);
+    color: var(--light-color);
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
 }
@@ -69,6 +98,11 @@ header{
     max-width: 420px;
 
 }
+.navBar_items.inactive{
+    display: none;
+}
+
+
 .navBar_items a{
     text-decoration: none;
     list-style: none;
@@ -81,31 +115,74 @@ header{
     font-size: 1.8rem;
 }
 
-.inactive{
-    display: none;
+.navBar_darkMode{
+    background-color: var(--dark-color) ;
+    border-radius: 1000px;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    outline: none;
 }
+
+.navBar_darkMode.active{
+    background-color: rgba(255, 166, 0, 0.567);
+    color: #000;
+}
+.navBar_darkMode.active::after{
+    left: unset;
+    right: 0;
+}
+
+.navBar_darkMode span {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    padding: 3px 0;
+    display: block;
+    background-color: none;
+    color: #fff;
+}
+
+.navBar_darkMode::after{
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    background: #F1F1F1;
+    top: 0;
+    left: 0;
+    right: unset;
+    border-radius: 100px;
+    transition: .3s ease all;
+    box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+}
+
 
 
 /* MAIN */
 main{
-    width: 90vw;
-
-    max-width: 830px;
-    margin: 0 auto;
+    width: 100vw;
+    padding: 25px 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .whoIam{
-    width: 100%;
+    width: 90%;
+    max-width: 80%;
     height: 85vh;
-    margin-bottom: 50px;
-
+    margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    gap: 20px;
 }
 .whoIam_description{
     text-align: center;
-    width: 285px ;
+    display: block;
 }
 .whoIam_description h2{
     font-size: 2.6rem;
@@ -115,14 +192,13 @@ main{
     font-size: 3.4rem;
     font-family: 'Quicksand', sans-serif;
 }
-.whoIam_description p{
+.whoIam_description h4{
     font-size: 1.8rem;
-    color: var(--principal-color);
-    margin-bottom: 35px;
+    margin-bottom: 5px;
+
 }
 .whoIam_description a{
-    width: 50px;
-    height: 15px;
+    display: block;
     background-color: var(--principal-color);
     color: var(--light-color);
     padding: 10px;
@@ -130,48 +206,60 @@ main{
     font-weight: 500;
     text-decoration: none;
 }
-.whoIam_description a:hover{
-    /* OPCION 1 */
+[data-theme="light"] .whoIam_description a:hover{
+    background-color: var(--dark-color);
+    color: var(--bg-color-2);
+}
+[data-theme="dark"] .whoIam_description a:hover{
     background-color: var(--second-color);
-    color: var(--dark-color);
-    border: 1px solid var(--dark-color);
+    color: var(--bg-color-1);
 }
 
-.whoIam_image{
-    background-color: var(--second-color);
-    position: relative;
-    width: 50%;
-    max-width: 308px;
-    min-width: 220px;
-    height: 300px;
+
+.whoIam_image figure{
+    width: 80%;
+    max-width: 450px;
+    margin: 0 auto;
+    background-color: var(--light-color);
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+[data-theme="dark"] .whoIam_image figure{
+    background-color: var(--bg-color-1);
 }
 
-.whoIam_image img{
-    position: absolute;
-    bottom: 0;
-    left: 8%;
+.whoIam_image figure img{
     width: 100%;
-    height: 380px;
-    background: transparent;
+    min-width: 240px;
 }
+
 
 .about{
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    padding: 15px 20px;
+    background-color: var(--bg-about);
 }
+[data-theme="dark"] .about{
+    background-color: var(--bg-color-2);
+}
+
+
 .title_main{
+    text-align: center;
     font-size: 2.6rem;
     font-family: 'Quicksand', sans-serif;
     color: var(--principal-color);
     margin-bottom: 15px;
 }
+[data-theme="dark"] .title_main{
+    color: var(--main-about-color);
+}
 
 .about_whoiam{
-    margin-bottom: 50px;
+    max-width: 850px;
+    margin: 0 auto;
 }
 
 .about_whoiam h3{
@@ -186,15 +274,16 @@ main{
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 35px;
-    text-align:left;
+    text-align:justify;
 }
 
 .about_skills{
     width: 100%;
+    max-width: 950px;
     display: flex;
+    margin: 0 auto;
     flex-direction: column;
     justify-content: flex-start;
-    margin-bottom: 50px;
 }
 .about_skills h3{
     font-size: 2rem;
@@ -214,7 +303,10 @@ main{
     height: 50px;
     margin: 0 auto;
     border-radius: 50%;
-    border: 1px solid var(--principal-color);
+    border: 1px solid var(--main-about-color) ;
+}
+[data-theme="light"] .about_skills--list span{
+    border: 1px solid  var(--border-skills) ;
 }
 .about_skills--list span i{
     width: 100%;
@@ -223,7 +315,7 @@ main{
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
-    color: var(--principal-color);
+    color: var(--hover-color);
     transition: transform 0.5s ease-in-out;
 }
 
@@ -236,6 +328,8 @@ main{
     text-align: center;
 }
 .projects_container{
+    max-width: 900px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -248,7 +342,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--light-color);
+    background-color: var(--cards-color);
     gap: 5px;
     box-shadow: 0 0 4px 1px var(--principal-color); 
     margin-bottom: 25px;
@@ -268,7 +362,7 @@ main{
 .projects_container--item a{ 
     width: 60%;
     height: 25px;
-    padding: 5px;
+    padding: 4px;
     border: none;
     text-decoration: none;
     background-color: var(--principal-color);
@@ -281,6 +375,13 @@ main{
     background-color: var(--bg-color-1);
     transform: translateY(-1px);
 }
+[data-theme="dark"] .projects_container--item a:hover {
+    background-color: var(--bg-color-2) ;
+    color:var(--bg-color-1) ;
+}
+
+/* FOOTER */
+
 .contact{
     width: 100%;
     display: flex;
@@ -321,7 +422,7 @@ main{
     color: var(--light-color);
     transition: opacity 0.5s ease-in-out,transform 0.5s ease-in-out;
 }
- .contact a:hover svg{
+.contact a:hover svg{
     opacity: 1; 
     transform: translateY(25px);
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -368,12 +469,5 @@ footer p{
         margin-top: 10px;
         flex-direction: column;
         justify-content: space-around;
-    }
-    .whoIam_image{
-        height: 200px;
-    }
-    .whoIam_image img{
-        height: 280px;
-        
     }
 }
