--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,473 +1,471 @@
-:root{
-    --black: #505050;
-    --white:#ffffff;
+:root {
+  --black: #505050;
+  --white: #ffffff;
 }
 [data-theme="dark"] {
-    /* Dark Mode */
-    --principal-color: #9C640C;
-    --second-color: rgb(146, 80, 22);
-    --cards-color: rgba(135, 86, 43, 0.48);
-    --dark-color: #353C1E;
-    --hover-color: #9CC76A;
-    --light-color: #FCFFF4;
-    --bg-color-1: #E0FFD9;
-    --bg-color-2: #5a6732;
-    --main-about-color: #a18e70;
+  /* Dark Mode */
+  --principal-color: #4f3a28;
+  --second-color: #cccab0;
+  --hover-color: #a6a18b;
+  --light-color: #fcfff4;
+  --bg-color-1: #656530;
+  --bg-color-2: #294d58;
 }
 [data-theme="light"] {
-    /* Light Mode */
-    --principal-color: #9C640C;
-    --second-color:#E0FFD9;
-    --light-color: #FCFFF4;
-    --hover-color: #9CC76A;
-    --dark-color: #454f27;
-    --bg-color-1: rgb(146, 80, 22);
-    --bg-color-2: #F8F0E8;
-    --bg-about: #F2F4E5;
-    --border-skills: #768543;
+  /* Light Mode */
+  --principal-color: #33363d;
+  --second-color: #e0ffd9;
+  --light-color: #fcfff4;
+  --hover-color: #13bbaf;
+  --dark-color: #454f27;
+  --bg-color-1: #dbe3b9;
+  --bg-color-2: #b9e1ee;
 }
 
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-    font-size: 62.5%;
-    font-family: 'Raleway', sans-serif; 
-    scroll-behavior: smooth;
+html {
+  font-size: 62.5%;
+  font-family: "Raleway", sans-serif;
+  scroll-behavior: smooth;
 }
-body{
-    background-color: var(--dark-color);
-    color: var(--black);
+body {
+  background-color: var(--bg-color-1);
+  color: var(--black);
 }
-[data-theme="light"] body{
-    background-color: var(--light-color);
+[data-theme="dark"] body {
+  color: var(--light-color);
 }
-[data-theme="dark"] body{
-    color: var(--light-color);
-}
-
 
 /* HEADER */
-header{
-    width: 100%;
-    height: 10vh;
-    padding: 0px 30px;
-    background-color: var(--principal-color);
+header {
+  width: 100%;
+  height: 10vh;
+  padding: 0px 30px;
+  background-color: var(--principal-color);
 }
-.navBar{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navBar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.navBar_brand{
-    display: flex;
-    gap: 7px;
-    justify-content: center;
-    align-items: center;
+.navBar_brand {
+  display: flex;
+  gap: 7px;
+  justify-content: center;
+  align-items: center;
 }
-.navBar_brand img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+.navBar_brand img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
-.navBar_alias{
-    font-size: 2rem;
-    color: var(--light-color);
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 500;
+.navBar_alias {
+  font-size: 2rem;
+  color: var(--light-color);
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
 }
 .menuMobile {
-    color: var(--light-color);
-    display: none;
+  color: var(--light-color);
+  display: none;
 }
-.menuMobile svg{
-    fill: currentColor;
-    scale: 0.6;
+.menuMobile svg {
+  fill: currentColor;
+  scale: 0.6;
 }
-.navBar_items{
-    padding: 6px 0;
-    display: flex;
-    justify-content: space-around;
-    width: 60%;
-    max-width: 420px;
-
+.navBar_items {
+  padding: 6px 0;
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  max-width: 420px;
 }
-.navBar_items.inactive{
-    display: none;
-}
-
-
-.navBar_items a{
-    text-decoration: none;
-    list-style: none;
-    color: var(--light-color);
-    font-size: 1.6rem;
-}
-.navBar_items a:hover{
-    color: var(--hover-color);
-    font-weight: 500;
-    font-size: 1.8rem;
+.navBar_items.inactive {
+  display: none;
 }
 
-.navBar_darkMode{
-    background-color: var(--dark-color) ;
-    border-radius: 1000px;
-    border: none;
-    position: relative;
-    cursor: pointer;
-    display: flex;
-    outline: none;
+.navBar_items a {
+  text-decoration: none;
+  list-style: none;
+  color: var(--light-color);
+  font-size: 1.6rem;
+}
+.navBar_items a:hover {
+  color: var(--hover-color);
+  font-weight: 500;
+  font-size: 1.8rem;
 }
 
-.navBar_darkMode.active{
-    background-color: rgba(255, 166, 0, 0.567);
-    color: #000;
+.navBar_darkMode {
+  background-color: var(--dark-color);
+  border-radius: 1000px;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  outline: none;
 }
-.navBar_darkMode.active::after{
-    left: unset;
-    right: 0;
+
+.navBar_darkMode.active {
+  background-color: rgba(255, 166, 0, 0.567);
+  color: #000;
+}
+.navBar_darkMode.active::after {
+  left: unset;
+  right: 0;
 }
 
 .navBar_darkMode span {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    padding: 3px 0;
-    display: block;
-    background-color: none;
-    color: #fff;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  padding: 3px 0;
+  display: block;
+  background-color: none;
+  color: #fff;
 }
 
-.navBar_darkMode::after{
-    content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    background: #F1F1F1;
-    top: 0;
-    left: 0;
-    right: unset;
-    border-radius: 100px;
-    transition: .3s ease all;
-    box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+.navBar_darkMode::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background: #f1f1f1;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 100px;
+  transition: 0.3s ease all;
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
-
-
 
 /* MAIN */
-main{
-    width: 100vw;
-    padding: 25px 25px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+main {
+  padding: 25px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
-.whoIam{
-    width: 90%;
-    max-width: 80%;
-    height: 85vh;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px;
+.whoIam {
+  width: 90%;
+  max-width: 80%;
+  height: 85vh;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
 }
-.whoIam_description{
-    text-align: center;
-    display: block;
+.whoIam_description {
+  text-align: center;
+  display: block;
 }
-.whoIam_description h2{
-    font-size: 2.6rem;
-    font-family: 'Quicksand', sans-serif;
+.whoIam_description h2 {
+  font-size: 2.6rem;
+  font-family: "Quicksand", sans-serif;
 }
-.whoIam_description h1{
-    font-size: 3.4rem;
-    font-family: 'Quicksand', sans-serif;
+.whoIam_description h1 {
+  font-size: 3.4rem;
+  font-family: "Quicksand", sans-serif;
+  margin-bottom: 10px;
 }
-.whoIam_description h4{
-    font-size: 1.8rem;
-    margin-bottom: 5px;
-
+.whoIam_description h4 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
 }
-.whoIam_description a{
-    display: block;
-    background-color: var(--principal-color);
-    color: var(--light-color);
-    padding: 10px;
-    font-size: 1.4rem;
-    font-weight: 500;
-    text-decoration: none;
+.whoIam_description a {
+  display: block;
+  color: var(--dark-color);
+  padding: 10px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 50px;
+  border: 4px solid var(--principal-color);
 }
-[data-theme="light"] .whoIam_description a:hover{
-    background-color: var(--dark-color);
-    color: var(--bg-color-2);
+[data-theme="light"] .whoIam_description a:hover {
+  border: 4px solid var(--hover-color);
 }
-[data-theme="dark"] .whoIam_description a:hover{
-    background-color: var(--second-color);
-    color: var(--bg-color-1);
-}
-
-
-.whoIam_image figure{
-    width: 80%;
-    max-width: 450px;
-    margin: 0 auto;
-    background-color: var(--light-color);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} 
-[data-theme="dark"] .whoIam_image figure{
-    background-color: var(--bg-color-1);
+[data-theme="dark"] .whoIam_description a:hover {
+  border: 4px solid var(--hover-color);
 }
 
-.whoIam_image figure img{
-    width: 100%;
-    min-width: 240px;
+.whoIam_image figure {
+  width: 80%;
+  max-width: 450px;
+  margin: 0 auto;
+  background-color: var(--second-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+[data-theme="dark"] .whoIam_image figure {
+  background-color: var(--second-color);
 }
 
-
-.about{
-    width: 100%;
-    padding: 15px 20px;
-    background-color: var(--bg-about);
-}
-[data-theme="dark"] .about{
-    background-color: var(--bg-color-2);
+.whoIam_image figure img {
+  width: 100%;
+  min-width: 240px;
 }
 
-
-.title_main{
-    text-align: center;
-    font-size: 2.6rem;
-    font-family: 'Quicksand', sans-serif;
-    color: var(--principal-color);
-    margin-bottom: 15px;
+.about {
+  width: 100%;
+  padding: 15px 20px;
+  background-color: var(--bg-color-2);
 }
-[data-theme="dark"] .title_main{
-    color: var(--main-about-color);
+[data-theme="dark"] .about {
+  background-color: var(--bg-color-2);
 }
 
-.about_whoiam{
-    max-width: 850px;
-    margin: 0 auto;
+.title_main {
+  text-align: center;
+  font-size: 2.8rem;
+  font-family: "Quicksand", sans-serif;
+  /* color: var(--principal-color); */
+  margin-bottom: 20px;
+}
+[data-theme="dark"] .title_main {
+  color: var(--light-color);
 }
 
-.about_whoiam h3{
-    font-size: 2rem;
-    color: var(--dark-color);
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 700;
-    margin-bottom: 25px;
+.about_whoiam {
+  max-width: 850px;
+  margin: 0 auto 25px;
 }
 
-.about_whoiam p{
-    font-size: 1.8rem;
-    font-weight: 300;
-    line-height: 35px;
-    text-align:justify;
+.about_whoiam h3 {
+  font-size: 2.4rem;
+  color: var(--dark-color);
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  margin-bottom: 25px;
 }
 
-.about_skills{
-    width: 100%;
-    max-width: 950px;
-    display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-.about_skills h3{
-    font-size: 2rem;
-    color: var(--dark-color);
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 700;
-    margin-bottom: 25px;
+.about_whoiam p {
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 35px;
+  text-align: justify;
 }
 
-.about_skills--list{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
+.about_skills {
+  width: 100%;
+  max-width: 850px;
+  display: flex;
+  margin: 0 auto 20px;
+  flex-direction: column;
+  justify-content: flex-start;
 }
-.about_skills--list span{
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    border-radius: 50%;
-    border: 1px solid var(--main-about-color) ;
+.about_skills h3 {
+  font-size: 2.4rem;
+  color: var(--dark-color);
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  margin-bottom: 25px;
 }
-[data-theme="light"] .about_skills--list span{
-    border: 1px solid  var(--border-skills) ;
-}
-.about_skills--list span i{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5rem;
-    color: var(--hover-color);
-    transition: transform 0.5s ease-in-out;
+.about_skills section h4 {
+  font-size: 1.8rem;
 }
 
-.about_skills--list span i:hover{
-    color: var(--bg-color-1);
-    transform: rotate(10deg) scale(1.1);
-    transition: all 0.3s ease-in-out;
+.about_skills--list {
+  margin: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-.projects{
-    text-align: center;
+
+.about_skills--list li {
+  display: flex;
+  flex-direction: column;
+  width: 65px;
+  height: 95px;
+  list-style: none;
+  align-items: center;
+  justify-content: space-between;
 }
-.projects_container{
-    max-width: 900px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.about_skills--list li div {
+  width: 65px;
+  height: 65px;
 }
-.projects_container--item{
-    width: 250px;
-    height: 280px;
-    padding: 6px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--cards-color);
-    gap: 5px;
-    box-shadow: 0 0 4px 1px var(--principal-color); 
-    margin-bottom: 25px;
+
+.about_skills--list li div i {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--dark-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  color: var(--dark-color);
 }
-.projects_container--item img{
-    width: 230px;
-    height: 140px;
-    object-fit: cover;
-    transition: transform 1s, filter 2s ease-in-out;
-    filter: grayscale(20%);
-    margin-bottom: 15px;
+[data-theme="dark"] .about_skills--list li div i {
+  border: 1px solid var(--light-color);
+  border-radius: 50%;
 }
-.projects_container--item img:hover{
-    filter: brightness(100%);
-    transform: scale(1.1);
+
+.about_skills--list li div i:hover {
+  color: var(--hover-color);
+  transform: rotate(10deg) scale(1.1);
+  transition: all 0.3s ease-in-out;
 }
-.projects_container--item a{ 
-    width: 60%;
-    height: 25px;
-    padding: 4px;
-    border: none;
-    text-decoration: none;
-    background-color: var(--principal-color);
-    color: var(--light-color);
-    border-radius: 5px;
-    cursor: pointer;
+.about_skills--list li span {
+  font-size: 1.4rem;
 }
-.projects_container--item a:hover{
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: var(--bg-color-1);
-    transform: translateY(-1px);
+
+.projects {
+  text-align: center;
+}
+.projects_container {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.projects_container--item {
+  width: 250px;
+  height: 280px;
+  padding: 6px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--bg-color-2);
+  gap: 5px;
+  box-shadow: 0 0 4px 1px var(--principal-color);
+  margin-bottom: 25px;
+}
+.projects_container--item img {
+  width: 230px;
+  height: 140px;
+  object-fit: cover;
+  transition: transform 1s, filter 2s ease-in-out;
+  filter: grayscale(20%);
+  margin-bottom: 15px;
+}
+.projects_container--item img:hover {
+  filter: brightness(100%);
+  transform: scale(1.1);
+}
+.projects_container--item a {
+  width: 60%;
+  height: 25px;
+  padding: 4px;
+  border: none;
+  text-decoration: none;
+  background-color: var(--principal-color);
+  color: var(--light-color);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.projects_container--item a:hover {
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  background-color: var(--hover-color);
+  transform: translateY(-1px);
 }
 [data-theme="dark"] .projects_container--item a:hover {
-    background-color: var(--bg-color-2) ;
-    color:var(--bg-color-1) ;
+  background-color: var(--hover-color);
+  color: var(--bg-color-1);
 }
 
 /* FOOTER */
 
-.contact{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.contact a{
-    position: relative;
-    display: flex;
-    width: 25%;
-    height: 120px;
-    padding: 10px;
-    min-width: 150px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    
+.contact a {
+  position: relative;
+  display: flex;
+  width: 25%;
+  height: 120px;
+  padding: 10px;
+  min-width: 150px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
-.contact a:nth-of-type(1){
-    background-color: rgb(10, 102, 194);
+.contact a:nth-of-type(1) {
+  background-color: rgb(10, 102, 194);
 }
-.contact a:nth-of-type(2){
-    background-color: rgb(26, 140, 216);
+.contact a:nth-of-type(2) {
+  background-color: rgb(33, 47, 60);
 }
-.contact a:nth-of-type(3){
-    background-color:rgb(139, 148, 158);
+.contact a:nth-of-type(3) {
+  background-color: rgb(139, 148, 158);
 }
-.contact a:nth-of-type(4){
-    background-color: rgb(234, 67, 53);
+.contact a:nth-of-type(4) {
+  background-color: rgb(234, 67, 53);
 }
-.contact a svg{
-    position: absolute;
-    top: -8px;
-    opacity: 0; 
-    width: 50px;
-    height: 50px;
-    color: var(--light-color);
-    transition: opacity 0.5s ease-in-out,transform 0.5s ease-in-out;
+.contact a svg {
+  position: absolute;
+  top: -8px;
+  opacity: 0;
+  width: 50px;
+  height: 50px;
+  color: var(--light-color);
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
-.contact a:hover svg{
-    opacity: 1; 
-    transform: translateY(25px);
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-} 
+.contact a:hover svg {
+  opacity: 1;
+  transform: translateY(25px);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
 
-.contact a span{
-    color: var(--light-color);
-    font-size: 1.6rem;
-    transition: transform 0.5s ease-in-out;
+.contact a span {
+  color: var(--light-color);
+  font-size: 1.6rem;
+  transition: transform 0.5s ease-in-out;
 }
-.contact a:hover span{
-    transition: transform 0.2s ease-in-out;
-    transform: translateY(25px);
+.contact a:hover span {
+  transition: transform 0.2s ease-in-out;
+  transform: translateY(25px);
 }
-footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-footer p{
-    font-size: 1.6rem;
-    font-weight: 700;
-    font-family: 'Quicksand', sans-serif;;
-    margin: 8px;
+footer p {
+  font-size: 1.6rem;
+  font-weight: 700;
+  font-family: "Quicksand", sans-serif;
+  margin: 8px;
 }
 /*Media querys*/
-@media (max-width:620px){
-    .navBar_items{
-        position: absolute;
-        top: 61px;
-        left:calc(55% - 55px);
-        gap: 10px;
-        width: 100px;
-        height: 120px;
-        flex-wrap: wrap;
-        background-color: var(--principal-color);
-        color: var(--dark-color);
-        box-shadow: 0 0 5px var(--dark-color);
-    }
-    .menuMobile{
-        display: block;
-    }
-    .whoIam{
-        margin-top: 10px;
-        flex-direction: column;
-        justify-content: space-around;
-    }
+@media (max-width: 620px) {
+  .navBar_items {
+    position: absolute;
+    top: 61px;
+    left: calc(55% - 55px);
+    gap: 10px;
+    width: 100px;
+    height: 120px;
+    flex-wrap: wrap;
+    background-color: var(--principal-color);
+    color: var(--dark-color);
+    box-shadow: 0 0 5px var(--dark-color);
+  }
+  .menuMobile {
+    display: block;
+  }
+  .whoIam {
+    margin-top: 10px;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 }
